--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -6,6 +6,59 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.fragments.movie_details.ui.MovieDetailsFragment">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+
+        <ImageButton
+            android:id="@+id/imgBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_back_arrow"
+            android:layout_gravity="start"
+            android:background="@android:color/transparent"
+            />
+
+
+        <ImageButton
+            android:id="@+id/imgProfile"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/img"
+            android:scaleType="fitXY"
+            android:layout_gravity="end"
+            android:background="@android:color/transparent"
+            android:layout_marginEnd="10dp"
+
+            />
+
+        <ImageButton
+            android:id="@+id/btnSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search"
+            app:backgroundTint="@android:color/transparent"
+            android:layout_gravity="end"
+            android:layout_marginEnd="10dp"
+            />
+
+    </com.google.android.material.appbar.MaterialToolbar>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/player"
         android:layout_width="match_parent"
@@ -169,6 +222,7 @@
         app:icon="@drawable/ic_add"
         app:iconGravity="textTop"
         android:text="My List"
+        android:textSize="10sp"
         app:backgroundTint="@android:color/transparent"
         app:layout_constraintTop_toBottomOf="@id/txtCreators"
         app:layout_constraintStart_toStartOf="@id/btnDownload"
@@ -189,6 +243,7 @@
         app:layout_constraintStart_toEndOf="@id/btnAddMyList"
         app:layout_constraintEnd_toStartOf="@id/btnShare"
         app:cornerRadius="0dp"
+        android:textSize="10sp"
         />
 
 
@@ -198,6 +253,7 @@
         android:layout_height="wrap_content"
         app:icon="@drawable/ic_share"
         app:iconGravity="textTop"
+        android:textSize="10sp"
         android:text="Share"
         app:backgroundTint="@android:color/transparent"
         app:layout_constraintTop_toBottomOf="@id/txtCreators"
@@ -212,6 +268,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:icon="@drawable/ic_download"
+        android:textSize="10sp"
         app:iconGravity="textTop"
         android:text="Download"
         app:backgroundTint="@android:color/transparent"
@@ -230,6 +287,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
+
+
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
 
 
