--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
 
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="android:windowBackground">@color/black</item>
         <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/white</item>
